syntax = "proto3";

package inventory;

option go_package = "github.com/thapakon-thai/eshop-microservices/proto/inventory";

service InventoryService {
  rpc GetStock (GetStockRequest) returns (GetStockResponse);
  rpc UpdateStock (UpdateStockRequest) returns (UpdateStockResponse);
}

message GetStockRequest {
  string product_id = 1;
}

message GetStockResponse {
    string product_id = 1;
    int32 quantity = 2;
}

message UpdateStockRequest {
    string product_id = 1;
    int32 quantity_change = 2; // Positive for add, negative for deduct
}

message UpdateStockResponse {
    bool success = 1;
    string message = 2;
    int32 new_quantity = 3;
}
