syntax = "proto3";

package product;

option go_package = "github.com/thapakon-thai/eshop-microservices/proto/product";

service ProductService {
  rpc GetProduct (GetProductRequest) returns (ProductResponse);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock = 5;
  string category_id = 6;
}

message GetProductRequest {
  string id = 1;
}

message ListProductsRequest {
  int32 page = 1;
  int32 limit = 2;
  string category_id = 3;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
  int32 total_count = 2;
}
